[package]
name = "ch_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.5.1"}
clap = { version = "4.5.4", features = ["derive","env"] }
config = "0.14.0"

metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
metrics-util = "0.16.3"
quanta = "0.12.3"
rand = "0.8.5"
reqwest = "0.12.4"

serde = {version = "1.0.197", features=["derive"]}
time = "0.3.36"
tokio = "1.37.0"




